lab1/Test/L1-A-13-46.output
Error Type A at Line 7
Error Type B at Line 13
Error Type A at Line 21
Error Type B at Line 27
Error Type A at Line 33
Error Type A at Line 34
Error Type B at Line 34
Error Type B at Line 38
Error Type B at Line 47
Error Type A at Line 47
