lab1/Test/L1-A-13-46.cmm
int ;
int xWNoBkGrVorMeiff , lnT 

;
int HKgOmLpE3R_PttH3wH ( int Ms2ktk7VxG , int VH2_S1FvKOGG3 
  ) {
  struct @FFpm REez ;
  float qhDvlqXIux9Zoxmren4 ;
  struct t6t0gAme {
  }_lCCb [ 1379972978 ] = EIAVOPmjw9Hnsk2 = y4hSyL 
    || MJ8RuCgjwg && tlcKW0zCbEU2 == SYIFu1_Vnlx_ZHkJS 
    - bH7cwHEt4IXrWRCc3b / ! - gKShFD ( ZxE6cllrmSxoz8Slq 
    , cT7ZgS4 ! B9vKVv4 [ XH6tIQED = GdZBbVk4VqFO0ncePH 
    && cZPyO8CpQqHqe != Vkpd6hHq7G9chd3XmvM / ( P0qTFv6 
    || yLkmOzJ5YJ < euqbYkTMTA - tydDKKs8FCPyFPRa [ jK9s5FkoO2_H6fILm5 
    || luOZ7Fq6oCS [ m5 || B8eXVX9JSRDtlpJo <= x / DF 
    ( DpvigmdNSWY , zX >= jKLuceWi ) ] / a14mookBVLtBM 
    . WyplOa / KezATLCPmc1c * - - cmOuQP0zxj9rgPjk8 + 
    A ] - - 1865139011.458918963 ) * 1047928860 + iAjrmUzhF 
    * MKS9ObW6 ( ) ] . zzSCgFEskHe ) , bCugqH5d87Bb ;
%{
  }}
int ;
int ;
int X ( ) {
  int Dg8Or ;
  int ULe <= ;
  int KtcUEnQcrancgarT ;
  int pkP85sJyHAI ;
  struct {
    int L ;
    struct R0WzdsEV7LTMGJu inWAkyON8SD7SxeU ;
  }`eiUNVmbOBP ;
~  if ( vLhde2GmgJcQw ) >   KWcqHfBhPMmPF2mHQ ;
else   if ( FqGQkXTnd0Rr8 )   if ( wj )   while ( 
    RqPjoN )   vwqsAHYodSu0rok9pIjQ ;

!= 


  if ( wclOXyeUPZxq )   if ( ByLVPS2WNDYYkJqFfgLi 
    )   o ;
else   return NwzevjeikPnVNcLxKf ;


}
= %